--- a/2022_02_16.ipynb
+++ b/2022_02_16.ipynb
@@ -9,12 +9,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d626357-8eb9-490f-8310-37b24dec1ee9",
+   "cell_type": "markdown",
+   "id": "66a04eb9-3f62-44f9-bc56-4dfa9951d0f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### this repository is for final_project"
+   ]
   }
  ],
  "metadata": {
